--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -32,6 +32,10 @@
   .sidebar--open {
     width: 24rem;
   }
+  #slidebar-add-task-box,
+  .search-box {
+    margin: auto 4rem;
+  }
 }
 @media (max-width: 768px) {
   .container {
@@ -50,7 +54,18 @@
     z-index: 50;
     top: 12px;
   }
+  #slidebar-add-task-box,
+  .search-box {
+    margin: auto 2.4rem;
+  }
 }
 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
+  .coming-soon {
+    max-width: 100vw;
+    height: 50vh;
+    justify-content: center;
+
+    margin: auto 2.4rem;
+  }
 }
